avance swagger clientes
