# routes/cliente.js
@@ -1,13 +1,0 @@
-const {Router}=require('express');
-const { crearCliente } = require('../controllers/clientes');
-const router=Router();
-
-
-
-router.post('/clienteNuevo',crearCliente)
-
-
-module.exports=router;
-
-
-
